--- a/org.xfce.ristretto.yml
+++ b/org.xfce.ristretto.yml
@@ -17,6 +17,8 @@ finish-args:
   # FIXME: necessary for the property dialog, but not sufficient (there is a fallback):
   # GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dfile_2derror_2dquark.Code24: Failed to open display ":99.0"
   - --talk-name=org.xfce.FileManager
+  # access remote locations with GVfs
+  - --filesystem=xdg-run/gvfs
 
 cleanup:
   - '*.la'
