--- a/org.xfce.ristretto.yml
+++ b/org.xfce.ristretto.yml
@@ -148,6 +148,7 @@ modules:
             x-checker-data:
               type: anitya
               project-id: 6845
+              stable-only: true
               url-template: https://boostorg.jfrog.io/artifactory/main/release/$version/source/boost_${version0}_${version1}_$version2.tar.gz
 
   - name: libheif
@@ -214,6 +215,7 @@ modules:
             x-checker-data:
               type: anitya
               project-id: 854
+              stable-only: true
               url-template: https://download-mirror.savannah.gnu.org/releases/freetype/freetype-$version.tar.xz
 
   - name: webp-pixbuf-loader
