--- a/org.xfce.ristretto.yml
+++ b/org.xfce.ristretto.yml
@@ -32,9 +32,6 @@ cleanup:
   - /share/gtk-doc
 
 modules:
-  # build-time dependencies
-  - shared-modules/intltool/intltool-0.51.json
-
   # mandatory dependencies
   - name: libxfce4util
     cleanup:
@@ -49,6 +46,9 @@ modules:
           type: anitya
           project-id: 232001
           url-template: https://archive.xfce.org/src/xfce/libxfce4util/$major.$minor/libxfce4util-$version.tar.bz2
+    modules:
+      # to be removed when libxfce4util goes to 4.20
+      - shared-modules/intltool/intltool-0.51.json
 
   - name: xfconf
     cleanup:
@@ -65,6 +65,9 @@ modules:
           type: anitya
           project-id: 14854
           url-template: https://archive.xfce.org/src/xfce/xfconf/$major.$minor/xfconf-$version.tar.bz2
+    modules:
+      # to be removed when xfconf goes to 4.20
+      - shared-modules/intltool/intltool-0.51.json
 
   - name: libxfce4ui
     cleanup:
@@ -82,6 +85,9 @@ modules:
           type: anitya
           project-id: 232000
           url-template: https://archive.xfce.org/src/xfce/libxfce4ui/$major.$minor/libxfce4ui-$version.tar.bz2
+    modules:
+      # to be removed when libxfce4ui goes to 4.20
+      - shared-modules/intltool/intltool-0.51.json
 
   # optional dependencies for gdk-pixbuf
   - name: libopenraw
@@ -255,6 +261,9 @@ modules:
           type: anitya
           project-id: 5014
           url-template: https://archive.xfce.org/src/xfce/tumbler/$major.$minor/tumbler-$version.tar.bz2
+    modules:
+      # to be removed when tumbler goes to 4.20
+      - shared-modules/intltool/intltool-0.51.json
 
   - name: ristretto
     config-opts:
