Fix random build failure of libwmf
See https://github.com/flathub/flathub/issues/4078#issuecomment-1584894472

--- a/org.xfce.ristretto.yml
+++ b/org.xfce.ristretto.yml
@@ -179,6 +179,9 @@ modules:
           tag-query: .tag_name
           version-query: $tag | sub("^v"; "")
           timestamp-query: .published_at
+      - type: shell
+        commands:
+          - autoreconf -vfi
     modules:
       - name: freetype
         buildsystem: meson
