--- a/org.xfce.ristretto.yml
+++ b/org.xfce.ristretto.yml
@@ -1,6 +1,6 @@
 app-id: org.xfce.ristretto
 runtime: org.freedesktop.Platform
-runtime-version: '23.08'
+runtime-version: '24.08'
 sdk: org.freedesktop.Sdk
 command: ristretto
 sdk-extensions:
@@ -126,7 +126,7 @@ modules:
           - '*'
         buildsystem: simple
         build-commands:
-          - ./bootstrap.sh --prefix=/app --with-libraries=system --with-libraries=test
+          - ./bootstrap.sh --prefix=/app --with-libraries=system,test
           - ./b2 install variant=release link=shared runtime-link=shared cxxflags="$CXXFLAGS"
             linkflags="$LDFLAGS" -j $FLATPAK_BUILDER_N_JOBS
         sources:
